--- a/LaTeX報告/first.tex
+++ b/LaTeX報告/first.tex
@@ -108,7 +108,7 @@ Application of reinforcement
 \addcontentsline{toc}{chapter}{誌\quad 謝}
 \centerline\LARGE\textbf{誌謝}\\
 \begin{flushleft}
-\fontsize{14pt}{2.5pt}\hspace{12pt}致謝內容
+\fontsize{14pt}{2.5pt}\hspace{12pt}在此鄭重感謝製作以及協助本專題完成的所有人員，首先向大四學長致謝，他們不辭辛勞解決我們所提問的任何問題，甚至從來沒有任何不耐煩，總是貼心的為我們找出最佳解答。再來是我們的指導教授嚴家銘教授，他給了我們全方位的支援，每次開會時也會向我們提出建議以及未來走向，同時也給了我們能自由摸索的空間及時間，最後是由本專題組員同心協力才得以完成本題目，特此感謝。
 \end{flushleft}
 \newpage
 %=------------------------目錄----------------------=%
