--- a/LaTeX報告/first.tex
+++ b/LaTeX報告/first.tex
@@ -59,15 +59,14 @@ left=3truecm,right=2.5truecm]{geometry}
 {\fontsize{24pt}{2.5pt}專題製作報告}\\[18pt]
 %設定文字盒子 [方框寬度的1.5倍寬][對其方式為文字平均分分布於方框中]\\距離下方18pt
 \vspace{3em} %下移
-\fontsize{30pt}{1pt}\textbf{強化學習在機電系統設計與控制\\
-\vspace{1em}中之應用}\\
+\fontsize{30pt}{1pt}\textbf{強化學習在機電系統中之應用}\\
 \vspace{4em}
 \sectionef\fontsize{30pt}{1em}\textbf
 {
 \vspace{0.5em}
 Application of reinforcement
  \vspace{0.5em} 
- learning in design and control of mechatronic systems}
+ learning in mechatronic systems}
  \vspace{2em}
 %=---------------------參與人員-----------------------=%             
 \end{center}
@@ -94,7 +93,7 @@ Application of reinforcement
 \vspace{3em}
 \fontsize{18pt}{2}\centerline{\makebox[\width][s]
 {中華民國\hspace{3em} 
-１１０ \quad 年\quad ３\quad 月}}
+１１０ \quad 年\quad ５\quad 月}}
 \end{titlepage}
 \newpage
 %=------------------------摘要-----------------------=%
