--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -281,35 +281,35 @@ $$=\frac{1}{1+e^{-x}}\frac{e^{-x}}{1+e^{-x}}=\frac{1}{1+e^{-x}}\frac{e^{-x}+1-1}
 
 \begin{itemize}
 \item Gradient Descent\\
-利用梯度的方式尋找最小值的位置，其特色可找到凸面error surface的絕對最小值，在非凸面error surface上找到相對最小值。其缺點是在非凸面error surface要避免被困在次優的局部最小值。\\
+利用梯度的方式尋找最小值的位置，其特色可找到凸面error surface的絕對最小值，在非凸面error surface上找到相對最小值。其缺點是在非凸面error surface要避免被困在次優的局部最小值。
 \item Batch gradient descent\\
-用批次的方式計算訓練資料，整個資料集計算梯度只更新一次，因此計算和更新時會占用大量記憶體。整體效率較差、速度較緩慢。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。\\
+用批次的方式計算訓練資料，整個資料集計算梯度只更新一次，因此計算和更新時會占用大量記憶體。整體效率較差、速度較緩慢。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。
 \item Stochastic gradient descent\\
-每次執行時會更新並消除誤差，有頻繁更新和變化大的特性，較不容易困在特定區域。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。\\
+每次執行時會更新並消除誤差，有頻繁更新和變化大的特性，較不容易困在特定區域。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。
 \item Mini-batch gradient descent\\
-結合 Batch gradient descent 和 Stochastic gradient descent 的特點：批量計算和頻繁更新，所衍伸的算法。利用小批量的方式頻繁更新，並使收斂更穩定。其缺點：學習率挑選不易、預定義 threshold 無法適應數據集的特徵、對很少發生的特徵無法執行較大的更新、非凸面error surface要避免被困在次優的局部最小值等。\\
+結合 Batch gradient descent 和 Stochastic gradient descent 的特點：批量計算和頻繁更新，所衍伸的算法。利用小批量的方式頻繁更新，並使收斂更穩定。其缺點：學習率挑選不易、預定義 threshold 無法適應數據集的特徵、對很少發生的特徵無法執行較大的更新、非凸面error surface要避免被困在次優的局部最小值等。
 \item Gradient descent optimization algorithms\\
-為了改善前面幾種算法而發展出來的優化算法。以下將列出數種優化算法。\\
+為了改善前面幾種算法而發展出來的優化算法。以下將列出數種優化算法。
 \item Momentum\\[6pt]
-在梯度下降法加上動量的概念，會加速收斂到最小值並減少震盪。\\
+在梯度下降法加上動量的概念，會加速收斂到最小值並減少震盪。
 \item Nesterov accelerated gradient\\
-NAG，有感知能力的 Momentum：在坡度變陡時減速，避免衝過最小值所造成的震盪(為了修正到最小值，來回修正而產生的震盪)\\
+NAG，有感知能力的 Momentum：在坡度變陡時減速，避免衝過最小值所造成的震盪(為了修正到最小值，來回修正而產生的震盪)。
 \item Adagrad\\
-其學習率能適應參數：頻繁出現的特徵用較低的學習率，不經常出現的特徵則用較高的學習率，且無須手動調整學習率。其缺點是，學習率會急遽下降，最後會無限小，這算法就不再獲得知識。\\
+其學習率能適應參數：頻繁出現的特徵用較低的學習率，不經常出現的特徵則用較高的學習率，且無須手動調整學習率。其缺點是，學習率會急遽下降，最後會無限小，這算法就不再獲得知識。
 \item Adadelta\\
-為 Adagrad 的延伸，下降激進程度，學習率從更新規則中淘汰，不需設定預設學習率。\\
+為 Adagrad 的延伸，下降激進程度，學習率從更新規則中淘汰，不需設定預設學習率。
 \item RMSprop\\
-為了解決 Adagrad 學習率急劇下降的問題，學習率除以梯度平方的RMS，解決學習率無限小的情形。\\
+為了解決 Adagrad 學習率急劇下降的問題，學習率除以梯度平方的RMS，解決學習率無限小的情形。
 \item Adam\\
-類似 Momentum，更加穩定快速的收斂。\\
+類似 Momentum，更加穩定快速的收斂。
 \item AdaMax\\
-與 Adam 相似，依靠$(u_t)$ 最大運算。\\
+與 Adam 相似，依靠$(u_t)$ 最大運算。
 \item Nadam\\
-結合 Adam 和 NAG ，應用先前參數執行兩次更新，一次更新參數一次更新梯度。\\
+結合 Adam 和 NAG ，應用先前參數執行兩次更新，一次更新參數一次更新梯度。
 \item AMSGrad\\
-改善 Adam 算法所導致收斂較差的情況(用指數平均會減少其影響)，換用梯度平方最大值來做計算，並移除去偏差的步驟。是否有比 Adam 算法好仍有待觀察。\\
+改善 Adam 算法所導致收斂較差的情況(用指數平均會減少其影響)，換用梯度平方最大值來做計算，並移除去偏差的步驟。是否有比 Adam 算法好仍有待觀察。
 \item Gradient noise\\[6pt]
-有助於訓練特別深且復雜的網絡，noise 可改善不良初始化的網路。\\
+有助於訓練特別深且復雜的網絡，noise 可改善不良初始化的網路。
 \end{itemize}
 \subsection{優化算法}
 \newpage
@@ -398,33 +398,35 @@ action 到指定狀態會獲得獎勵。
 $$R(s_t=s) = \mathbb{E}[r_t|s_t = s]$$
 $$\gamma \in [0, 1]$$
 \begin{itemize}
-\item Horizon：\\
-在無限的狀態以有限的狀態表示。\\
-\item Return：\\
-越早做出正確決策獎勵越高。\\
+\item Horizon：
+在無限的狀態以有限的狀態表示。
+\item Return：
+越早做出正確決策獎勵越高。
 $$G_t = R_{t+1}+\gamma R_{t+2}+\gamma^2 R_{t+3}+\gamma^3 R_{t+4}+...+\gamma^{T-t-1} R_{T}$$
-\item State value function(決策價值)：\\
+\item State value function(決策價值)：
 $$V_t(S) = \mathbb{E}[G_t|s_t = s]$$
 $$P(s_{s+1}=s'|s_t=s,a_t=a)$$
 \end{itemize}
-\item Discount Factor ($\gamma$)\\
+\item Discount Factor ($\gamma$)
 獎勵衰減有幾種作法：第一種，越早做出有獎勵的決策，獎勵越高：第二種，做出有價值的決策$\gamma = 1$，不分決策順序先後；第三種，無用的決策$C = 0$，不會得到獎勵。\\
 以Bellman equation的方式描述互動關係狀態：\\
 $$V(s) = R(s)+\gamma\sum_{s'\in S}P(s'|s)V(s')$$
-$$R(s):立即獎勵$$
-$$\gamma\sum_{s'\in S}P(s'|s)V(s')：未來獎勵衰減總和$$
-Anaytic solution(分析性解法)，MRP的分析性解法：\\
+\begin{center}
+$R(s)$:立即獎勵\\
+$\gamma\sum_{s'\in S}P(s'|s)V(s')$：未來獎勵衰減總和
+\end{center}
+Anaytic solution(分析性解法)，MRP的分析性解法：
 $$V = (1-\gamma P)^{-1}R$$
 Bellman equation及Anaytic solution的方式只適合小的MRP(個數比較少的)，矩陣複雜度為$O(N^3)$，N為狀態個數。若要計算大型的MRP會使用疊代法：動態規劃(Dynamic programming)、Temporal-Difference learning和Mote-Carlo evaluation以評估採樣的方式：
 $$g = \sum_{i=t}^{H-1}\gamma^{1-t}r_i$$
 $$G_t \leftarrow G_t+g,  i \leftarrow i+1$$
 $$V_t(s) \leftarrow \frac{G_t}{N}$$
-\item Markov Decision Process\\
+\item Markov Decision Process
 \quad 在MRP中加入決策(decision)和動作(action)
 \begin{itemize}
 \item S：state 狀態
 \item A：action 動作
-\item P：狀態轉換\\[6pt]
+\item P：狀態轉換
 $P(s_{s+1}=s'|s_t=s,a_t=a)$
 \item R：獎勵，取決於當前狀態和動作會得到相對應的講勵
 $$R(s_t=s, a_t=a) = \mathbb{E}[r_t|s_t, a_t=a]$$
@@ -438,10 +440,10 @@ $$\gamma \in [0,1]$$
 MDP(S, A, P, R, gamma)
 \end{lstlisting}
 
-
 policy(決策)：可以是一個決策行為的機率或確定執行的行為，若以數學方程式表示：
 $$\pi (a|s) = P(a_t=a|s_t=s)$$
 MRP和MDP方程式互相轉換：\\
+%=========表格=========%
 \begin{center}
 \begin{tabular}[c]{ccc}    
 %\multicolumn{1}{r}{MRP}
