--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -496,13 +496,13 @@ $$q^\pi(s, a)=R(s, a)+\gamma\sum_{s'\in S}P(s'|s, a)\sum_{a'\in A}\pi(a'|s')q^{\
 s : States\\[5pt]
 a : Actions\\[5pt]
 r : Rewards\\[5pt]
-$S_t,A_t,R_t$ : State,Action and Reward at time step 't' of one trajectory\\[5pt]
+$S_t,A_t,R_t$ : 一個軌跡時間步長't'的State,Action and Reward \\[5pt]
 $\gamma$ : Discount Factor;懲罰不確定的未來reward\\[5pt]
 $G_t$ : Return;Discounted future reward$G_t = \sum_{k=0}^{\infty} \gamma^k R_{t+k+1}$\\[5pt]
 $P(s', r \vert s, a)$ : 伴隨著現在的a和r的state前往下一個state's'的轉移機率矩陣(單階)\\[5pt]
 $\pi(a \vert s)$ : 隨機策略(agent的行為策略)\\[5pt]
 $\pi_\theta(.)$ : 被$\theta$參數化的策略\\[5pt]
-$\mu(s)$ : 確定的策略;we also lable this as $\pi(s)$ using a different letter gives better distinction so thst we can easily tell when the policy is stochastic or deterministic\\[5pt]
+$\mu(s)$ : 確定的策略;我們還使用不同的字母將其標記為$ \ pi（s）$，以提供更好的區分，以便我們可以輕鬆判斷策略是隨機的還是具有確定性的\\[5pt]
 $V(s)$ : '狀態值函數'測量state的預期收益(報酬率)\\[5pt]
 $V^\pi(s)$ : 根據policy的狀態值函數$V^\pi (s) = \mathbb{E}_{a\sim \pi} [G_t \vert S_t = s]$\\[5pt]
 $Q(s, a)$ : '行為值函數'評估一對state and action 的預期收益\\[5pt]
@@ -510,9 +510,9 @@ $Q_w(.)$ : 被w參數化的行為值函數\\[5pt]
 $Q^\pi(s, a)$ : 根據policy的行為值函數$Q^\pi(s, a) = \mathbb{E}_{a\sim \pi} [G_t \vert S_t = s, A_t = a]$\\[5pt]
 $A(s, a)$ : Advantage Function,$A(s, a) = Q(s, a) - V(s)$;像是另一種版本的Q-value;由狀態值為基準降低方差\\[5pt]
 參數化 : 待軟體建置於一給定環境時，再依該環境的實際需求填選參數，即可成為適合該環境的軟體。\\[5pt]
-The goal of reinforcement learning : Find an optimal behavior strategy for the agent to obtain optimal reward\\[5pt]
-The goal of policy gradient : Modeling and optimizing the policy directly\\[5pt]
-The value of reward function : 取決於策略，克應用各種算法optimize$\theta$，已獲得最佳reward\\[5pt]
+強化學習的目標：為agent找到最優的行為策略以獲得最優的報酬\\[5pt]
+Policy Gradient的目標：直接建模和優化策略\\[5pt]
+reward function的值 : 取決於策略，可應用各種算法optimize$\theta$，已獲得最佳reward\\[5pt]
 defined as:\\[5pt]
 $$J(\theta) 
 = \sum_{s \in \mathcal{S}} d^\pi(s) V^\pi(s) 
@@ -590,30 +590,30 @@ $V^\pi(s_t) = \mathbb{E}_{s_{t}+1:\infty,a_{t}:\infty}[\sum_{l=0}^\infty r_t+l]$
 $Q^\pi(s_t,a_t) = \mathbb{E}_{s_{t}+1:\infty_,a_{t}+1:\infty}[\sum_{l=0}^\infty r_t+l]$\\[5pt]
 $A^\pi(s_t,a_t) = Q^\pi(s_t,a_t)-V^\pi(s_t)(Advantage Function)$\\[5pt]
 \subsection{Actor Crtic}
-原始的policy gradient 沒有bias，但方差大;Many following algorithms were proposed to reduce variance while keeping thebias unchanged\\[5pt]
+原始的policy gradient 沒有偏差，但方差大;所以提出了許多以下算法來減少方差，同時保持偏差不變\\[5pt]
 $$g = \mathbb{E}[\sum_{t=0}^\infty\psi_t\nabla_\theta log\pi_\theta(a_t \vert s_t)]$$\\[5pt]
-Actor-Critic : reduce gradient variance in vanilla policy consist of two models\\[5pt]
-Critic : updates the value function parameter w and depending on the algorithm it could be action-value $Q_w(a \vert s) $or state-value $V_w(s)$\\[5pt]
-Actor : update the policy parameters $\theta$ for $\pi_\theta(a \vert s)$,in direction suggested by critic\\[5pt]
+Actor-Critic : 減少原始政策中的梯度方差包括兩個模型\\[5pt]
+Critic : 更新值函數參數w，根據算法，它可以是操作值$ Q_w（a \ vert s）$或狀態值$ V_w（s）$ \\[5pt]
+Actor : 按照Critic的建議，將策略參數$ \ theta $更新為$ \ pi_ \ theta（a \ vert s）$\\[5pt]
 \begin{Large}
-How it work in a simple action-value actor-critic:
+它如何在簡單的行動價值參與者批評中發揮作用:
 \end{Large}
 \begin{itemize}
-\item Initialize s,$\theta$,w at random;sample a $\sim
+\item 隨機的初始化 s,$\theta$,w ;取樣 a $\sim
 \pi_\theta(a \vert s)$
 \end{itemize}
 \begin{itemize}
 \item For $t =1 \sim T:$ 
 \begin{enumerate}[1]
-      \item Sample reward $r_t$ $\sim$ $R(s,a)$ and next state $s^{'}$ $\sim$ $P(s^{'}\vert s,a)$ 
-      \item The sample the next action $a^{'}$ $\sim$ $\pi_\theta(a^{'}\vert s^{'})$
+      \item 取樣 reward $r_t$ $\sim$ $R(s,a)$ 隨後下一階段 $s^{'}$ $\sim$ $P(s^{'}\vert s,a)$ 
+      \item 樣本的下一個動作 $a^{'}$ $\sim$ $\pi_\theta(a^{'}\vert s^{'})$
     
-       \item Update the policy parameters $\theta$ :\\
+       \item 更新 policy 參數 $\theta$ :\\
        $$\theta\leftarrow\theta+\alpha_\theta Q_w(s,a)\nabla_\theta ln\pi_\theta(a\vert s)$$
-       \item Compute the correction (TD error) for action-value at time t:\\
-       $$\delta = r_t + \gamma Q_w(s^{'},a^{'})-Q_w(s,a)$$ and use it to update the parameters of action - value function:\\
+       \item 計算校正 (TD error)對於時間t的動作值:\\
+       $$\delta = r_t + \gamma Q_w(s^{'},a^{'})-Q_w(s,a)$$並使用它來更新操作action - value function:\\
        $$w\leftarrow w+\alpha_w \delta \nabla_w Q_w(s,a) $$
-       \item Update $a\leftarrow a^{'} and s \leftarrow s^{'}$ ; learning rate : $a_\theta$ and $a_w$
+       \item 更新 $a\leftarrow a^{'} and s \leftarrow s^{'}$ ; 學習率 : $a_\theta$ 和 $a_w$
     \end{enumerate}   
 \end{itemize}\newpage
 \section{類神經網路中強化學習的應用}
