--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -982,14 +982,18 @@ A：格式轉換原始定義成"("和")"，所以出現誤換的問題。\\
 \begin{center}
 \fontsize{0.001pt}{1pt}\selectfont .\\
 \vspace{4em}
-\fontsize{30pt}{30pt}\selectfont 【14】 \\
+\fontsize{30pt}{30pt}\selectfont 【13】 \\
 \fontsize{20pt}{40pt}\selectfont
+\vspace{0.5em}
 分\\
 類\\
 編\\
 號\\
+\vspace{0.5em}
 \hspace{-0.5em}：\\
-\rotatebox[origin=cc]{270}{\sectionef\LARGE \textbf{1-2-APP-8765}}\\ %旋轉
+\vspace{0.5em}
+\rotatebox[origin=cc]{270}{\sectionef\LARGE \textbf{109-4-APP-3004-1}}\\ %旋轉
+\vspace{0.5em}
 強\\
 化\\
 學\\
@@ -1004,9 +1008,9 @@ A：格式轉換原始定義成"("和")"，所以出現誤換的問題。\\
 應\\
 用\\
 \vspace{2em}
-八\\
-七\\
-六\\
+一\\
+一\\
+零\\
 級\\
 
 \end{center}
