--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -492,6 +492,13 @@ $$= \sum_{a\in A}\pi (a|s)q^{\pi}(s, a)$$
 $$q^\pi(s, a)=R(s, a)+\gamma\sum_{s'\in S}P(s'|s, a)\sum_{a'\in A}\pi(a'|s')q^{\pi}(s', a')$$
 \newpage
 \section{Policy Gradient}
+\begin{figure}[hbt!]
+\begin{center}
+\includegraphics[width=15cm]{policy gradient原理 }
+\caption{\Large Policy Gradient原理}
+\label{Policy Gradient原理}
+\end{center}
+\end{figure}
 \hspace{-1.5em}$\pi$ : policy\\[5pt]
 s : States\\[5pt]
 a : Actions\\[5pt]
