--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -201,12 +201,12 @@ Application of reinforcement
 \setcounter{page}{1}  %設定頁數
 \fontsize{14pt}{2.5pt}\sectionef
 \section{研究動機}
- 機器學習與各領域結合的應用越來越廣泛，因此結合了機電系統，機器學習的算法採用強化學習演算法。由於強化學習是一種使自動化控制系統最優化的機器學習方法，並以實體的冰球機為範例，將冰球機的機電系統進行強化學習訓練，進而驗證強化學習對於自動化控制系統的優化程度。
+電腦科學對於機器學習的依賴越來越重要，自動微分的發展使得完全自動化計算導數的艱鉅工作成為了可能，這使得運用不同的機器學習方法進行實驗變得非常容易，同時仍然允許基於梯度的優化，達到最佳化，利用冰球機的機電系統如圖(圖.\ref{兩層神經網路})，為了解決人機對打與實際硬體所遇到的困境，故作為模擬的目標如圖(圖.\ref{兩層神經網路})，結合類神經網路與強化學習訓練，迅速達到控制的最佳化，減少實際機體成本，進而驗證機器學習對於機電系統的優化能力。
  
 \section{研究目的與方法}
- 本研究分兩大部分，第一運用Open AI Gym的Pong-v0來訓練機器學習，第二利用CoppilaSim模擬環境並訓練出能與人對打的機電系統。\\
+ 本研究分兩大部分，第一運用OpenAI Gym裡內建編譯的ATARI 2600遊戲Pong-v0，來作為訓練環境，加上機器學習的理論，訓練出最佳AI，第二換為CoppilaSim模擬環境並套用訓練程式，成為能與人對打的機電系統。\\
  
- 利用Gym的訓練環境來側試不同的算法所得到的訓練結果，比較不同算法、參數間的差異，並找出較適合Pong game的算法、參數，循序漸進提高環境的真實程度，來減少一開始就是以實體的方式測試所帶來硬體、程式、時間和金錢等成本。\\
+ 利用Gym的訓練環境來測試不同的算法所得到的訓練結果，比較不同算法、參數間的差異，並找出較適合Pong game的算法、參數，循序漸進提高環境的真實程度，來減少一開始就是以實體的方式測試所帶來硬體、程式、時間和金錢等成本。\\
 
  將Gym的訓練環境轉換到CoppilaSim模擬環境，利用貼近真實的模擬環境來修正在純程式的架構與真實環境間的誤差，雖然CoppilaSim模擬環境與真實環境仍有些微的落差，但與Gym相比CoppilaSim的環境已非常貼近真實了，拉近了虛擬與現實間的距離，提高了實用性的價值。
 \section{未來展望}
@@ -695,7 +695,7 @@ $$\approx \frac{1}{S} \sum_{s=1}^{S}f(z^{(s)})\nabla_\theta \log p(z^{(s)};\thet
  Score function gradient estimator的可視化，左：高斯分佈及其中的一些樣本（藍點)，在每個藍點上，我們還繪製了相對於高斯平均參數的對數概率的梯度，箭頭指示應微調分佈平均值以增加該樣本概率的方向。中間：某些得分函數的疊加，在某些小區域中除了+1之外，其他所有地方都給出-1（請注意，這可以是任意的，不一定是可微分的標量值函數)，箭頭現在採用了顏色區別，因為由於更新中的乘法運算，我們將平均所有綠色箭頭和紅色箭頭的負數。右：更新參數後，綠色箭頭和反向紅色箭頭將我們向左移至底部。現在，根據需要，該分佈中的樣本將具有更高的預期分數。\\
 \newpage
 \chapter{訓練環境}
-\section{openAI Gym}
+\section{OpenAI Gym}
  Gym 是用於開發和比較強化學習算法的工具包，他不對agent的結構做任何假設，並且與任何數據計算庫兼容，而可以用來制定強化學習的算法。這個環境具有共享的介面，使我們能用來編寫常規算法，也就能教導agents如何步行到玩遊戲。\\[6pt]
 
 \section{Pong}
