--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -1094,9 +1094,116 @@ A：格式轉換原始定義成"("和")"，所以出現誤換的問題。\\
 \end{Large}
 \end{flushleft}
 \newpage
-\begin{center}
-\LARGE\textbf 作者簡介\\
-\end{center}
+%=-------------作者簡介-----------------=%也是抄的
+    \begin{center}
+	\fontsize{20pt}{0em}\selectfont \bf{作者簡介}\\
+	\end{center}
+	
+	{\begin{textblock}{6}(0,0.5)
+	\begin{figure}
+	\includegraphics[width=1.15in]{40723110.jpg} 
+	\end{figure}
+	\end{textblock}}
+	{\renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
+	{\begin{textblock}{15}(3.5,0.7)%{寬度}(以左上角為原點之右移量,下移量)
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{姓名}\enspace:\enspace
+    \fontsize{14pt}{0em}\selectfont \makebox[4em][s]{李正揚}\\     \hspace*{\fill} \\
+    \fontsize{14pt}{0em}\selectfont \makebox[4em][s]{學號}\enspace:\enspace
+    \fontsize{14pt}{0em}\selectfont \makebox[4em][s]{40723110} \\ %\makebox為文本盒子
+    \hspace*{\fill} \\
+    \fontsize{14pt}{0em}\selectfont \makebox[4em][s]{畢業學校}\enspace:\enspace
+    \fontsize{14pt}{0em}\selectfont \makebox[9em][s]{國立虎尾科技大學}\\
+    \fontsize{14pt}{0em}\selectfont \makebox[5em][s]{\quad}\enspace\enspace
+    \fontsize{14pt}{0em}\selectfont \makebox[8em][s]{機械設計工程系}\\
+    \hspace*{\fill} \\
+    \fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
+    \end{textblock}}}
+    \hspace*{\fill} \\
+
+	{\begin{textblock}{6}(0,2.3)
+	\begin{figure}
+	\includegraphics[width=1.15in]{40723115.jpg} 
+    \end{figure}
+    \end{textblock}}
+    {\renewcommand\baselinestretch{0.99}
+    \selectfont %設定以下行距
+    {\begin{textblock}{15}(3.5,2.5) %{寬度}(以左上角為原點之右移量,下移量)
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{姓名}\enspace:\enspace
+\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{林于哲}\\ 
+\hspace*{\fill} \\
+\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{學號}\enspace:\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{40723115} \\ 
+\hspace*{\fill} \\
+\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{畢業學校}\enspace:\enspace
+\fontsize{14pt}{0em}\selectfont \makebox[9em][s]{國立虎尾科技大學}\\
+\fontsize{14pt}{0em}\selectfont \makebox[5em][s]{\quad}\enspace\enspace
+\fontsize{14pt}{0em}\selectfont \makebox[8em][s]{機械設計工程系}\\
+\hspace*{\fill} \\
+\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
+    \end{textblock}}}
+    \hspace*{\fill} \\
+
+
+    {\begin{textblock}{6}(0,4.1)
+    \begin{figure}
+        \includegraphics[width=1.15in]{40723138.jpg} 
+    \end{figure}
+    \end{textblock}}
+    {\renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
+    {\begin{textblock}{15}(3.5,4.3) %{寬度}(以左上角為原點之右移量,下移量)
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{姓名}\enspace:\enspace%\noindent指定首行不進行縮排
+\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{黃奕慶}\\ 
+\hspace*{\fill} \\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{學號}\enspace:\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{40723138} \\ %\makebox為文本盒子
+\hspace*{\fill} \\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{畢業學校}\enspace:\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[9em][s]{國立虎尾科技大學}\\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[5em][s]{\quad}\enspace\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[8em][s]{機械設計工程系}\\
+\hspace*{\fill} \\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
+    \end{textblock}}}
+    \hspace*{\fill} \\
+
+    {\begin{textblock}{6}(0,5.9)
+    \begin{figure}
+        \includegraphics[width=1.15in]{40723148.jpg} %{}內是圖片文件的相對路徑
+    \end{figure}
+    \end{textblock}}
+    {\renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
+    {\begin{textblock}{15}(3.5,6.1) %{寬度}(以左上角為原點之右移量,下移量)
+\noindent\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{姓名}\enspace:\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{鄭博鴻}\\ \hspace*{\fill} \\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{學號}\enspace:\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{40723153} \\ \hspace*{\fill} \\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{畢業學校}\enspace:\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[9em][s]{國立虎尾科技大學}\\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[5em][s]{\quad}\enspace\enspace
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[8em][s]{機械設計工程系}\\
+\hspace*{\fill} \\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
+    \end{textblock}}}
+    \hspace*{\fill} \\
+
+    {\begin{textblock}{6}(0,7.7)
+    \begin{figure}
+        \includegraphics[width=1.15in]{40723150.jpg} %{}內是圖片文件的相對路徑
+    \end{figure}
+    \end{textblock}}
+    \renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
+    {\begin{textblock}{15}(3.5,7.9) %{寬度}(以左上角為原點之右移量,下移量)
+	\noindent\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{姓名}\enspace:\enspace
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{簡國龍}\\ \hspace*{\fill} \\
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{學號}\enspace:\enspace
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{40723150} \\ \hspace*{\fill} \\
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{畢業學校}\enspace:\enspace
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[9em][s]{國立虎尾科技大學}\\
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[5em][s]{\quad}\enspace\enspace
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[8em][s]{機械設計工程系}\\
+	\hspace*{\fill} \\
+	\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
+    \end{textblock}}
 \newpage
 %=----------------書背----------------------=%
 \pagestyle{empty}%設定沒有頁眉和頁腳
@@ -1104,7 +1211,7 @@ A：格式轉換原始定義成"("和")"，所以出現誤換的問題。\\
 \fontsize{0.001pt}{1pt}\selectfont .\\
 \vspace{4em}
 \fontsize{30pt}{30pt}\selectfont 【13】 \\
-\fontsize{20pt}{40pt}\selectfont
+\fontsize{20pt}{20pt}\selectfont
 \vspace{0.5em}
 分\\
 類\\
