--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -36,6 +36,8 @@ left=3truecm,right=2.5truecm]{geometry}
 \voffset=-8mm %調整上下邊界
 \setlength{\parindent}{2em}%設定首行行距縮排
 \usepackage{appendix} %附錄
+\usepackage{diagbox}%引用表格
+\usepackage{multirow}%表格置中
  %=------------------更改標題內容----------------------=%
 \titleformat{\chapter}[hang]{\center\sectionef\fontsize{20pt}{1pt}\bfseries}{\LARGE 第\CJKnumber{\thechapter}章}{1em}{}[]
 \titleformat{\section}[hang]{\sectionef\fontsize{18pt}{2.5pt}\bfseries}{{\thesection}}{0.5em}{}[]
@@ -231,7 +233,7 @@ Application of reinforcement
 
  將Gym的訓練環境轉換到CoppilaSim模擬環境，利用貼近真實的模擬環境來修正在純程式的架構（Gym）與真實環境間的誤差，雖然CoppilaSim模擬環境與真實環境仍有些微的落差，兩者相比CoppilaSim的環境已非常貼近真實了，拉近了虛擬與現實間的距離，提高了實用性的價值。
 \section{未來展望}
-\qquad 
+此專題希望能利用機械學習達到設計最佳化，並以其數據加入到對應虛擬環境進行演練，再以完整伺服器與網頁進行觀看、操控、更改環境參數，將以上綜合導入到實體機電系統上，實現機械學習在機電系統中的應用。且希望簡化設計過程加速整體設計流程，使其流程應用在各產業設計。
 \section{規則說明}
  Pong game 的遊戲規則簡單，透過擊錘將球打入對方球門即得一分，只要其中一方得21分就結束該局。擊錘只能沿單方向來回移動來進行防守和進攻。\\
 遊戲規則如下：
@@ -1527,15 +1529,49 @@ A：修改g ym.wrappers.Monitor的video\_ recorder.py的設定(圖.\ref{fig.vide
 \end{thebibliography}
 \newpage
 %=---------------附錄-----------------=%
-\addcontentsline{toc}{chapter}{\bibname} %新增目錄名稱
-%\renewcommand{\bibname}{TTTTTT}
-\titleformat{\chapter}[display]{\normalfont\LARGE\bfseries\makebox[3.5em][l]}{附~錄~}{1em}{\Large}[]
-%\titlecontents{chapter}[11mm]{}{\sectionef\fontsize{18pt}{2.5pt}\bfseries\makebox[3.5em][l]
-%\titleformat{\subsection}[hang]{\sectionef\fontsize{18pt}{2.5pt}\bfseries}{{\thesubsection}}{1em}{}[]
-\renewcommand\appendixname{\makebox[3.5em][l] {附~錄}} %設定標題名稱
+\addcontentsline{toc}{chapter}{附錄} %新增目錄名稱
+
 \begin{appendix}
-\renewcommand{\thechapter}{\Alph{chapter}\bf 附錄}%設定標題名稱
-\section{T}
+\renewcommand{\thesection}{\bf 附錄 \Alph{section}}%設定標題名稱
+\begin{center}
+\fontsize{20pt}{0em}\selectfont\bf 附錄
+\end{center}
+\section{LaTeX}
+LaTex 為一種程式語言，支援標準庫 (Standard Libraries) 和外部程式庫 (External Libraries)，不過與一般程式語言不同的是，它可以直接表述 Tex 排版結構，類似於 PHP 之於 HTML 的概念。但是直接撰寫 LaTex 仍較複雜，因此可以藉由 Markdown 這種輕量的標註式語言先行完成文章，再交由 LaTex 排版。
+此專題報告採用編輯軟體為LaTeX，綜合對比Word編輯方法，LaTeX較為精準正確、更改、製作公式等，以便符合規範、製作。
+ \begin{table}[htbp] %htbp代表表格浮動位置
+			\centering%表格居中
+			\caption{文字編輯軟體比較表}%表:標題
+			\large%字體大小
+			\label{tab_文字編輯軟體比較表:scale}
+			\begin{tabular}{|c|c|c|c|c|c|c|}
+			\hline
+			\diagbox[width=5em]& 相容性 & 直觀性 & 文件排版 & 數學公式 & 微調細部\\ 
+			\hline
+			LaTeX 		&$\surd$&		&$\surd$&$\surd$&$\surd$\\
+			\hline
+			Word	 	&		&$\surd$&		&		&$\surd$\\
+			\hline
+			
+			\end{tabular}
+		\end{table}	
+
+\begin{itemize} 
+\item 特點:
+\end{itemize}
+\begin{enumerate}
+\item 相容性：以Word為例會有版本差異，使用較高版本編輯的文件可能無法以較低的版本開啟，且不同作業系統也有些許差異；相比LaTeX可以利用不同編譯器進行編譯，且為免費軟體也可移植至可攜系統內，可以搭配Github協同編譯。
+\item 文件排版：許多規範都會要求使用特定版型，使用文字編譯環境較能準確符合規定之版型，且能夠大範圍的自定義排定所需格式，並能不受之後更改而整體格式變形。
+\item 數學公式呈現：LaTex可以直接利用本身多元的模組套件加入、編輯數學公式，在數學推導過程能夠快速的輸入自己需要的內容即可。
+\item 細部調整：在大型論文、報告中有多項文字、圖片、表格，需要調整細部時，要在好幾頁中找尋，而LaTeX可以分段章節進行編譯，再進行合併處理大章節。
+\end{enumerate}
+\begin{figure}[hbt!]
+\begin{center}
+\includegraphics[width=15cm]{編譯流程.png}
+\caption{\Large 編譯流程}
+\label{fig.編譯流程}
+\end{center}
+\end{figure}
 \end{appendix}
 \newpage
 %=-------------作者簡介-----------------=%也是抄的
