--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -1510,6 +1510,7 @@ A：修改g ym.wrappers.Monitor的video\_ recorder.py的設定(圖.\ref{fig.vide
 
 修正後將"("和")"換成"\$"，就解決誤換問題
 %=---------------------參考文獻----------------------=%
+\addcontentsline{toc}{chapter}{參考文獻} %新增目錄名稱
 \newpage
 \renewcommand\bibname{參~考~文~獻}
 \begin{thebibliography}{99}  % 參考文獻印出之編號最寬為兩個字母寬
@@ -1536,7 +1537,7 @@ A：修改g ym.wrappers.Monitor的video\_ recorder.py的設定(圖.\ref{fig.vide
 \begin{center}
 \fontsize{20pt}{0em}\selectfont\bf 附錄
 \end{center}
-\section{LaTeX}
+\section*{LaTeX}
 LaTex 為一種程式語言，支援標準庫 (Standard Libraries) 和外部程式庫 (External Libraries)，不過與一般程式語言不同的是，它可以直接表述 Tex 排版結構，類似於 PHP 之於 HTML 的概念。但是直接撰寫 LaTex 仍較複雜，因此可以藉由 Markdown 這種輕量的標註式語言先行完成文章，再交由 LaTex 排版。
 此專題報告採用編輯軟體為LaTeX，綜合對比Word編輯方法，LaTeX較為精準正確、更改、製作公式等，以便符合規範、製作。
  \begin{table}[htbp] %htbp代表表格浮動位置
