--- a/LaTeX報告/abstract.tex
+++ b/LaTeX報告/abstract.tex
@@ -9,7 +9,8 @@
 \begin{flushleft}
 \fontsize{14pt}{20pt}\sectionef\hspace{12pt} 產業中的需求提升因而生產、製造、研發等效率需要有所提升，最佳化的方式能有的提升效率。本專題將以實體冰球機的機電系統簡化進行強化學習，並結合類神經網路，測試不同演算法使冰球機對打控制系統最佳化，並嘗試將其算法應用到實體機電系統上。\\[12pt]
 
-\fontsize{14pt}{20pt}\sectionef\hspace{12pt} 此專題是運用實體冰球對打機，將其導入CoppeliaSim模擬環境並給予對應設置，將其機電系統簡化並運用Open AI Gym進行訓練，找到適合此系統的演算法後，再到CoppeliaSim模擬環境中進行測試演算法在實際運用上的可行性。\\[12pt]
+\fontsize{14pt}{20pt}\sectionef\hspace{12pt} 此專題是運用實體冰球對打機，將其導入CoppeliaSim模擬環境並給予對應設置，將其機電系統簡化並運用Open AI Gym進行訓練，找到適合此系統的演算法後，再到CoppeliaSim模擬環境中進行測試演算法在實際運用上的可行性。並嘗試透過架設伺服器將CoppeliaSim影像串流到網頁供使用者觀看或操控。\\[12pt]
+
 \end{flushleft}
 \begin{center}
 \fontsize{14pt}{20pt}\selectfont 關鍵字: 類神經網路、強化學習、\sectionef CoppeliaSim、OpenAI Gym
