--- a/LaTeX報告/1_introduction.tex
+++ b/LaTeX報告/1_introduction.tex
@@ -33,11 +33,11 @@
  
  利用Gym的訓練環境來測試不同的算法所得到的訓練結果，比較不同算法、參數間的差異，並找出較適合Pong game的算法、參數，循序漸進提高環境的真實程度，來減少一開始就是以實體的方式測試所帶來硬體、程式、時間和金錢等成本。\\
 
- 將Gym的訓練環境轉換到CoppilaSim模擬環境，利用貼近真實的模擬環境來修正在純程式的架構（Gym）與真實環境間的誤差，雖然CoppilaSim模擬環境與真實環境仍有些微的落差，兩者相比CoppilaSim的環境已非常貼近真實了，拉近了虛擬與現實間的距離，提高了實用性的價值。\\
+ 將Gym的訓練環境轉換到CoppilaSim模擬環境，利用貼近真實的模擬環境來修正在純程式的架構（Gym）與真實環境間的誤差，雖然CoppilaSim模擬環境與真實環境仍有些微的落差，兩者相比CoppilaSim的環境已非常貼近真實了，拉近了虛擬與現實間的距離，提高了實用性的價值。這部分還有利用OpenCV進行影像處理並撰寫輔助對打程式來協助玩家預判球的移動路徑或彈射位置。影像處理除了應用在輔助對打上，最主要是應用在訓練強化學習所需的輸入訓練影像。\\
  
  再透過架設伺服器與虛擬環境結合：讓虛擬環境的影像透過網伺服器串流影像供使用者遠端進行操控虛擬環境的擊錘進行打球，或是提供多人進行觀看對打影像。
 \section{未來展望}
-此專題希望能利用機械學習達到設計最佳化，並以其數據加入到對應虛擬環境進行演練，再以完整伺服器與網頁進行觀看、操控、更改環境參數，將以上綜合導入到實體機電系統上，實現機械學習在機電系統中的應用。且希望簡化設計過程加速整體設計流程，使其流程應用在各產業設計。
+此專題希望能利用現有完成的機械學習的算法，能發展成虛擬訓練，再將訓練完的機器學習應用到虛擬環境或是實體機電系統，並透過伺服器將影像串流提供玩家網頁介面進行遠端操控，同時提供多人觀看及時的比賽影像，將整個冰球機的控制和使用者間有更完善串聯，機電系統的部分達到最優化控制和虛實整合的應用。
 \section{規則說明}
  Pong game 的遊戲規則簡單，透過擊錘將球打入對方球門即得一分，只要其中一方得21分就結束該局。擊錘只能沿單方向來回移動來進行防守和進攻。\\
 遊戲規則如下：
