--- a/LaTeX報告/2_machine_learning.tex
+++ b/LaTeX報告/2_machine_learning.tex
@@ -2,16 +2,16 @@
 \section{類神經網絡}
 \begin{figure}[hbt!]
 \begin{center}
-\includegraphics[scale=0.74]{兩層神經網路}
-\caption{\Large 兩層神經網路}\label{兩層神經網路}
+\includegraphics[scale=0.74]{類神經網路}
+\caption{\Large 兩層神經網路}\label{類神經網路}
 \end{center}
 \end{figure}
 
- 兩層類神經網路的架構，如(圖.\ref{兩層神經網路})所示每一層的每一個神經元都會連接到下一層全部的神經元，對於每個神經元的連線會給出權重。\\
+ 典型的類神經網路架構，如(圖.\ref{兩層神經網路})所示每一層的每一個神經元都會連接到下一層全部的神經元，對於每個神經元輸出會有不同的權重。\\
 
- 神經元是AI系統中使用的軟件模型，其行為或多或少像實際的大腦神經元，模型會使用數字，使一個或另一個神經元對結果產生重要的影響，這些數字又稱為權重。\\
+ 神經元是AI系統中使用的數學模型，其行為與實際的大腦神經元運作方式相仿，模型以數字的方式表達，神經元間傳遞會有不同強度，而以數值的大小代表不同強度，這個數值我們稱為權重，對結果產生重要的影響。\\
 
- (圖.\ref{兩層神經網路})也展示了輸入層、隱藏層和輸出層，這是最陽春的網路，真正的網路可以更複雜且有更多層次，事實上深度學習命名原則，就是由多層的隱藏層而來，從意義上來說就是增加了類神經網路的深度。\\
+ (圖.\ref{兩層神經網路})也展示了輸入層、隱藏層和輸出層，這是基礎的類神經網路架構，實際運用上還有更多樣更複雜的類神經網路架構，事實上深度學習，就是由多層的隱藏層而來，從意義上來說就是增加了類神經網路的深度。\\
 
  此外，如(圖.\ref{兩層神經網路})所示，是具有過濾層並在​​其中從左到右處理信息，數據輸入的方向只有一個，故被稱為前饋輸入(feed-forward input)。\\
 
@@ -104,7 +104,7 @@ $$MSE=\frac{1}{n} \sum_{i=1}^n(y_i-\overline{y} _i)^2$$\\
 \newpage
 \begin{figure}
 \begin{center}
-\includegraphics[width=16cm,height=15cm]{類神經網路關係}
+\includegraphics[width=16cm]{類神經網路關係}
 \caption{\Large 類神經網路關係}
 \label{類神經網路關係}
 \end{center}
